--- a/sass/components/_stream-services.scss
+++ b/sass/components/_stream-services.scss
@@ -22,6 +22,8 @@
     }
 
     @media only screen and (min-width: $bp-tablet) {
+        justify-content: space-between;
+
         &__spotify {
             width: auto;
         }
