--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -44,6 +44,7 @@
         
             & .stream-services {
                 grid-area: services;
+                max-width: 53.6rem;
                 margin-bottom: 0rem;
             }
 
